maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
var BiscuitX=0
^JediEscaper:3: error: expected class or object definition
var BiscuitY=0
^JediEscaper:7: error: expected start of definition
override def run() {
         ^JediEscaper:12: error: expected class or object definition
def chercherBiscuit(){
^